# distributed_inference

./: .gitignore  Cargo.toml
onnx-splitter/: main.mojo  pixi.toml  pyproject.toml
onnx-splitter/src/: onnx_model.mojo
onnx-splitter/src/onnx_splitter/: __init__.py
onnx-splitter/tests/: test_onnx_model.mojo  test_some.py
python/: README.md  main.py  model.onnx  onnx_load.py  pyproject.toml  split_model_try.py
src/: main.rs
