[project]
name = "onnx-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mr-Leshiy", email = "leshiy12345678@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "onnx>=1.19.0",
]

[project.scripts]
onnx-splitter = "onnx_splitter:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
